Fix mobiel style footer spacing

--- a/resources/src/reclastheme/theme.fragments.in-short.scss
+++ b/resources/src/reclastheme/theme.fragments.in-short.scss
@@ -11,6 +11,8 @@
         margin-right: auto;
         max-width: 450px;
 
+        padding: 0 $spacer;
+
         line-height: 2;
         text-align: left;
       }
@@ -58,7 +60,7 @@
 
     .row > div:first-child {
       text-align: right;
-      padding-right: 100px;
+      padding: 0 100px 0 0;
       p {
         line-height: 2;
         float: right;
